# sdk

./: .bandit  .cursorrules  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  .secrets.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.py
.cursor/: agentstr.code-workspace
.github/ISSUE_TEMPLATE/: 1_bug_report.md  bug_report.md  config.yml
.github/workflows/: publish-package.yml  python-publish.yml  test-build.yml
agentstr/: core.py  marketplace.py  nostr.py
agentstr/src/: __init__.py  nostr.py
docs/: contributing.mdx  docs.json  docs.md  introduction.mdx  quickstart.mdx
docs/api-reference/: buyer.mdx  dadjokegame.mdx  introduction.mdx  models.mdx  nostr.mdx  seller.mdx
docs/essentials/: agentdiscovery.mdx  delegation.mdx  marketplace.mdx  messages.mdx  profile.mdx
docs/examples/: agentic-buyer.mdx  agentic-seller.mdx  dad-joke-game.mdx
docs/snippets/: installation.mdx
examples/api_buyer/: .env.example  Dockerfile  README.md  api_buyer.py  docker-compose.yml  requirements.txt
examples/basic_buyer/: .env.example  README.md  basic_buyer.py  requirements.txt
examples/basic_cli/: README.md  main.py
examples/basic_merchant/: .env.example  README.md  basic_merchant.py  copperstone.py  dhb.py  mtp.py  nrm.py  requirements.txt
examples/dad_joke_game/: .env.example  README.md  __init__.py  joker.py  publisher.py  requirements.txt
examples/nostr_utils/: .env.example  README.md  nostr_utils.py  requirements.txt
src/agentstr/: __init__.py  buyer.py  buyer.pyi  marketplace.py  merchant.py  merchant.pyi  models.py  models.pyi  nostr.py  nostr.pyi  seller.py  seller.pyi  utils.py  utils.pyi
src/agentstr/examples/basic_cli/: .env.example  main.py
src/synvya_sdk/: __init__.py  buyer.pyi  models.py  models.pyi  nostr.py  nostr.pyi
src/synvya_sdk/agno/: __init__.py  buyer.py  buyer.pyi  dadjokegamer.py  seller.py  seller.pyi
tests/: conftest.py  test_buyer.py  test_core.py  test_delegation.py  test_merchant.py  test_nostr.py  test_nostr_integration.py  test_nostr_mocked.py  test_profile_external_identities.py  test_profile_geohash.py  test_profile_multiple_namespaces.py  test_profile_namespace_profile_types.py  test_seller.py
tests/agno/: test_buyer.py  test_buyer_kb_storage.py  test_seller.py
